--- a/sources/Debate/src/main/resources/application.properties
+++ b/sources/Debate/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.data.mongodb.uri=mongodb://localhost/debate
+server.servlet.context-path = /api
+
+spring.servlet.multipart.max-file-size=4MB
+spring.servlet.multipart.max-request-size=15MB
