--- a/sources/Debate/src/main/resources/application.properties
+++ b/sources/Debate/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.data.mongodb.uri=mongodb://localhost/debate
 server.servlet.context-path = /api
 
+# Token should be moved to env variables on production environments
+app.jwt.secret=takpowinnowygladachaslowgfbi
+app.jwt.duration=2000000
+
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=15MB
+
+
+# Actuator settings
+management.endpoint.mappings.enabled=true
+management.endpoints.web.exposure.include=info, health, mappings
