Fix comment bug

--- a/sources/Debate/src/main/resources/application.properties
+++ b/sources/Debate/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=15MB
 
 
-# Actuator settings
+# Actuator settings. Hide mappings on production environments!
 management.endpoint.mappings.enabled=true
 management.endpoints.web.exposure.include=info, health, mappings
