--- a/sources/Debate-frontend/angular.json
+++ b/sources/Debate-frontend/angular.json
@@ -131,5 +131,8 @@
       }
     }
   },
-  "defaultProject": "Debate-frontend"
+  "defaultProject": "Debate-frontend",
+  "cli": {
+    "analytics": false
+  }
 }
