Revert "Add angular.json after npm ci"
This reverts commit 3775d66abf765136a346cbec714a6b0aa253b34b.

git revert testing

--- a/sources/Debate-frontend/angular.json
+++ b/sources/Debate-frontend/angular.json
@@ -131,8 +131,5 @@
       }
     }
   },
-  "defaultProject": "Debate-frontend",
-  "cli": {
-    "analytics": false
-  }
+  "defaultProject": "Debate-frontend"
 }
