--- a/sources/Debate-frontend/angular.json
+++ b/sources/Debate-frontend/angular.json
@@ -61,6 +61,14 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "devmobile": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.devmobile.ts"
+                }
+              ]
             }
           }
         },
@@ -72,6 +80,9 @@
           "configurations": {
             "production": {
               "browserTarget": "Debate-frontend:build:production"
+            },
+            "devmobile": {
+              "browserTarget": "Debate-frontend:build:devmobile"
             }
           }
         },
