--- a/sources/Debate/src/main/resources/application-dev.properties
+++ b/sources/Debate/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
 spring.data.mongodb.uri=mongodb://localhost/debate
 
+app.jwt.secret=takpowinnowygladachaslowgfbi
+
 # Actuator settings. Hide mappings on production environments!
 management.endpoint.mappings.enabled=true
 management.endpoints.web.exposure.include=info, health, mappings
