--- a/sources/Debate-frontend/Dockerfile
+++ b/sources/Debate-frontend/Dockerfile
@@ -1,11 +1,11 @@
-FROM node
+FROM node:current-alpine
 
 RUN npm install --global http-server
 
 WORKDIR /static
 
-EXPOSE 9000
+EXPOSE 80
 
 COPY /dist/Debate-frontend .
 
-CMD http-server -p 9000 .
+CMD http-server -p 80 .
